@@ -20,6 +20,8 @@ post-v1.8.0
       program was not included in distribution packaging.)
     - Stable bond mode is deprecated and will be removed no earlier than
       February 2013.  Please email dev@openvswitch.org with concerns.
+    - The autopath action is deprecated and will be removed no earlier than
+      February 2013.  Please email dev@openvswitch.org with concerns.
 
 
 v1.8.0 - xx xxx xxxx
